src/ui/styles/cards-view.css
/* ===== Note Cards ===== */
.explorer-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: var(--explorer-space-3);
}

.explorer-notes-grid {
  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
  margin-top: var(--explorer-space-4);
}

.is-mobile .explorer-notes-grid {
    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
 /* grid-template-columns: repeat(auto-fit, minmax(1px, 1fr));  */
  /* gap: var(--explorer-space-4) !important; */
}

.explorer-card {
  border: var(--explorer-card-border);
  box-shadow: var(--explorer-shadow-glass-small);
  /* background: var(--explorer-bg-interactive); */
  border-radius: var(--explorer-radius-md);
  padding: var(--explorer-space-2);
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  cursor: pointer;
}

.explorer-card:hover {
    border: 1px solid var(--background-modifier-border-hover);
}
/* .explorer-card-header a {
  /* color: var(--text-normal) !important; */
  /* font-weight: var(--font-semibold); }
 */


.explorer-card:hover {
  --explorer-surface-border: var(--explorer-card-border-hover);
}

.explorer-card-header {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  /* margin-bottom: var(--explorer-space-4); */
  flex: 1;
}

.explorer-card-exts {
  opacity: 0.8;
  display: flex;
  align-items: flex-start;
  gap: var(--explorer-space-1);
}


.explorer-card-exts svg {
  max-height: 0.9em;
  max-width: 0.9em;
}

.explorer-card-footer {
  opacity: 0.5;
  font-size: 0.7em;
  margin-bottom: 0 !important;
  /* margin-top: var(--explorer-space-4); */
  margin-top: var(--explorer-space-1);
  padding-top: .5em;
}

.explorer-card-footer:hover {
  opacity: 0.9 !important;
}

.explorer-card-footer a {
  color: var(--text-normal) !important;
}

.explorer-card-footer:hover a {
  color: var(--text-accent) !important;
}

/* .explorer-card-ext .tags-container {
  max-height: 1em !important;
}
.is-mobile .explorer-card .tags-container {
  flex-direction: column !important;
} */
.explorer-card-body {
padding-top: var(--explorer-space-2);
}
.explorer-card-tags-container {
  display: flex; 
  gap: var(--explorer-space-2);
  flex-wrap: wrap;
}

.explorer-card-exts .explorer-badge {
  opacity: .7 !important;
  display: flex;
  justify-content: center;
}
.explorer-card-exts .explorer-badge:hover {
  opacity: 1 !important;
}
/* .explorer-card-exts .tag:hover {

} */
.explorer-card-exts .explorer-badge.pin svg {
  transform: scale(1.3);
}

